nearly finished the layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toster</title>
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
+
 <body>
-    
+
+    <!-- Offer -->
+    <section class="offer">
+        <div class="offer-header">
+            <div class="container">
+                <p class="offer-header__text">special offer + free delivery 2-4 days in sa</p>
+            </div>
+        </div>
+        <div class="offer-logo">
+            <a class="offer-logo__image" href="#">
+                <img src="/assets/images/logo.png" alt='Logo of company "Cushion"'>
+            </a>
+        </div>
+        <div class="offer-content">
+            <div class="offer-timer offer-content__item">
+                <p class="offer-timer__description">
+                    limited offer
+                </p>
+                <p class="offer-time">
+
+                </p>
+            </div>
+
+            <div class="offer-price offer-content__item">
+                <p class="offer-price__old">
+                    r 250.00
+                </p>
+                <p class="offer-price__new">
+                    r 160.00
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- ./offer -->
+
+    <!-- Products -->
+    <section class="products">
+        <div class="products-header">
+            <p class="products-header__rating">
+                <span class="raiting-level">Excellent</span>
+                <span class="raiting-score">4.8/5</span>
+            </p>
+
+            <a class="products-header__reviews-service" href="#">
+                <img src="/assets/images/reviewsService.png" alt="Reviews service's logo">
+            </a>
+
+            <a href="#" class="products-header__category">
+                best selling
+            </a>
+        </div>
+        <div class="products-content">
+            <p class="products-content__title">
+                orthopedic slippers
+            </p>
+            <div class="products-content__slider">
+                <div class="slider__current-product">
+                    <img src="#" alt="">
+                </div>
+                <ul class="slider__pagination"></ul>
+            </div>
+
+            <p class="products-content__info">
+                <span class="products-content__info-title">
+                    fast delivery:
+                </span>
+                2-4 days from SA
+            </p>
+
+            <p class="products-content__info">
+                <span class="products-content__info-title">
+                    in stock:
+                </span>
+                Shipping from Johannesburg
+            </p>
+
+            <div class="products-content__rating">
+                <img 
+                    class="products-content__rating-stars" 
+                    src="/assets/images/ratingStars.png" 
+                    alt="Rating stars"
+                >
+                <p class="products-content__rating-count-reviews">
+                    (10)
+                </p>
+            </div>
+
+            <div class="order">
+                <div class="order-options">
+                    <div class="order-options__option">
+                        <p class="order-options__option-title">
+                            color
+                        </p>
+                        <select name="color" id="color" class="options-list">
+
+                        </select>
+                    </div>
+                    <div class="order-options__option">
+                        <p class="order-options__option-title">
+                            size
+                        </p>
+                        <select name="color" id="color" class="options-list">
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                    </div>
+                    <a href="https://youtube.com">buy now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ./products -->
 </body>
+
 </html>
