--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toster</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -13,13 +13,13 @@
     <!-- Offer -->
     <section class="offer">
         <div class="offer-header">
-            <img class="za-flag" src="/assets/images/za.png" alt="">
+            <img class="za-flag" src="assets/images/za.png" alt="">
             <p class="offer-header__text"> special offer + free delivery 2-4 days in sa </p>
-            <img class="za-flag" src="/assets/images/za.png" alt="">
+            <img class="za-flag" src="assets/images/za.png" alt="">
         </div>
         <div class="offer-logo">
             <a class="offer-logo__image" href="#">
-                <img src="/assets/images/logo.png" alt='Logo of company "Cushion"'>
+                <img src="assets/images/logo.png" alt='Logo of company "Cushion"'>
             </a>
         </div>
         <div class="offer-content">
@@ -76,7 +76,7 @@
                     fast delivery:
                 </span>
                 2-4 days from SA
-                <img class="za-flag" src="/assets/images/za.png" alt="">
+                <img class="za-flag" src="assets/images/za.png" alt="">
             </p>
 
             <p class="products-content__info">
@@ -84,7 +84,7 @@
                     in stock:
                 </span>
                 Shipping from Johannesburg
-                <img class="za-flag" src="/assets/images/za.png" alt="">
+                <img class="za-flag" src="assets/images/za.png" alt="">
             </p>
 
             <div class="products-content__rating">
@@ -146,8 +146,7 @@
     <!-- ./products -->
 
     <!-- Scripts -->
-    <!-- <script src="/assets/data/product.json"></script> -->
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
